# SKU_Analysis_ETL

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  init_azure_db.py  notes  pyproject.toml  requirements.txt  reset_failed_batches.py  run_api.py  run_daily_pipeline.sh  run_historical_pipeline.sh  test.py
analysis/: analysis.py  dashboard.py  deploy_analytics_db.py
analysis/api/: database.py  dependencies.py  main.py  schemas.py
analysis/sql/: indexes.sql
configs/: database_template.env
data_cleaning_dev/: cleaning_step4_date_numeric.py  cleaning_step5_5_generate_step6_ready_csvs.py
docker-init/: init.sql
docs/: Clean_Architecture.md  etl.md
extract/common/: batch_manager.py  db_utils.py
extract/sap/: extract_config.py  fetch_po_pages.py  flatten_pages_streaming.py  flatten_po.py  run_daily_extract.py  run_historical_extract.py  token_manager.py
extract/transform/: clean_po_data.py
scripts/: restart_clean.ps1  run_etl_daily.ps1  verify_mvs.py  verify_success.py
src/api/: app.py  database.py  deps.py  deps_auth.py  limiter.py  schemas.py  utils_cache.py  utils_logger.py  utils_query.py
src/common/: secure_env.py
src/dashboard/: app.py
src/db/: create_phase3_objects.py  init_db.py  maintenance_runner.py  performance_maintenance.sql  phase3_schema.sql  refresh_summaries.py  schema.sql
src/etl/: etl_ingest.py  etl_ingest_resilient.py
src/monitoring/: alerting.py  last_run_watchdog.py  (+2 more)
step6_db/: indexes_postgres.sql  ingest_from_csv.py  insert_helpers.sql  partition_generator.py  schema_postgres.sql
(+26 files in other folders)
